kustomize/base/eazypay-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eazypay-frontend-service
spec:
  selector:
    app: eazypay-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5173
