kustomize/base/eazypay-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: eazypay-ingress
    namespace: default
spec:
    ingressClassName: nginx
    rules:
      - host: eazypay.infrasensei.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service: 
                  name: eazypay-frontend-service
                  port:
                    number: 5000
              path: /
